<resources>
    <string name="app_name" translatable="false">Рецепты</string>
    <string name="contentdesc_delete_category">Удалить категорию</string>
    <string name="contentdesc_edit_category">Изменить категорию</string>
    <string name="title_activity_create_recipe">Создать рецепт</string>
    <string name="recipe_name_hint">Название рецепта</string>
    <string name="recipe_category">Категория</string>
    <string name="recipe_ingredients">Ингридиенты</string>
    <string name="contentdesc_add_ingredient">Добавить кнопку ингридиентов</string>
    <string name="contentdesc_remove_ingredient">Удалить кнопку ингридиентов</string>
    <string name="recipe_instructions">Приготовление</string>
    <string name="action_save">Сохранить</string>
    <string name="action_cancel">Отмена</string>
    <string name="create_recipe_cancel">Сброс?</string>
    <string name="yes">Ок</string>
    <string name="recipe_no_category">Без категории</string>
    <string name="title_activity_view_recipe">Показать рецепт</string>
    <string name="action_edit_recipe">Изменить рецепт</string>
    <string name="action_delete_recipe">Удалить рецепт</string>
    <string name="cancel">Отмена</string>
    <string name="alert_delete_recipe">Удалить рецепт?</string>
    <string name="alert_recipe_saved">Рецепт сохранен!</string>
    <string name="title_activity_edit_recipe">Изменить рецепт</string>
    <string name="title_activity_edit_categories">Категория</string>
    <string name="title_activity_edit_category">"Изменение катигории: "</string>
    <string name="category_name_hint">Название категории</string>
    <string name="alert_delete_category">Удалить категорию?</string>
    <string name="alert_blank_recipe_name">Название рецепта не может быть пустым!</string>
    <string name="alert_blank_category_name">Название категории не может быть пустым!</string>
    <string name="action_delete">Удалить</string>
    <string name="title_create_category">Создать категорию</string>
    <string name="category_name_duplicate">Уже существует категория с таким именем!</string>
    <string name="alert_category_saved">Категория сохранена!</string>
    <string name="alert_category_deleted">Категория удалена!</string>
    <string name="alert_recipe_deleted">Рецепт удален!</string>
    <string name="title_no_categories">Категории не найдены. Нажмите плюс, чтоб создать!</string>
    <string name="title_no_recipes">Рецепты не найдены. Нажмите плюс, чтоб создать!</string>
    <string name="search_hint">Поиск</string>
    <string name="action_edit_category">Смена категории</string>
    <string name="title_edit_category">Смена категории</string>
    <string name="title_activity_about">About</string>
    <string name="action_license">Open source licenses</string>
    <string name="text_about_app">A simple open source Cookbook app.</string>
    <string name="text_about_url" translatable="false">https://mrfrozzen.github.io/</string>
    <string name="action_about">About</string>
    <string name="action_cookbook_license">License</string>
    <string name="action_share">Поделиться</string>
    <string name="title_editing_category">Изменение категории \'%1$s\'</string>
    <string name="title_deleting_category">Удаление категории \'%1$s\'?</string>
    <string name="title_version_number">Версия %1$s</string>
    <string name="title_introduction_example_recipes">Пример рецепта</string>
    <string name="title_introduction_example_categories">Пример категории</string>
    <string name="option_introduction_recipes">Да, я хочу пример рецептов!</string>
    <string name="option_introduction_categories">Да, я хочу пример категорий!</string>
    <string name="recipe_name_duplicate">Уже есть рецепт с этим именем!</string>
    <string name="alert_delete_ingredient">Это приведет к удалению строки с наименьшим ингредиентом. Если вы хотите удалить какой-либо другой ингредиент без удаления самого низкого, просто оставьте поле пустым и оно не будет добавлено в рецепт.</string>
    <string name="title_dont_show_dialog">Не показывать это диалоговое окно в будущем</string>
    <string name="title_delete_ingredient">Удалить ингридиенты</string>
    <string name="title_no_recipes_in_category">В этой категории нет рецептов.</string>
    <string name="title_no_favorites">Вы не добавили никаких рецептов в Избранное.</string>
    <string name="tab_text_1">Рецепты</string>
    <string name="tab_text_3">Категории</string>
    <string name="tab_text_2">Избранное</string>
    <string name="action_delete_category">Удалить категорию</string>
    <string name="action_create_recipe">Создать рецепт</string>
    <string name="action_create_category">Создать категорию</string>
    <string name="category_name_invalid">Неправельное название категории</string>
    <string name="contentdesc_recipe_image">Картинка рецепта</string>
    <string name="action_create">Создать</string>
    <string name="alert_too_long">Слишком длинное имя!</string>
    <string name="action_take_picture">Получить фото</string>
    <string name="action_select_image">Выбрать картинку</string>
    <string name="action_clear_image">Нет картинки</string>
    <string name="alert_recipe_added_to_favorites">Рецепт добавлен в Избранное</string>
    <string name="alert_recipe_removed_from_favorites">Рецепт удален из Избранного</string>
    <string name="title_edit_image">Смена фото рецепта</string>
    <string name="action_choose">Выберите</string>
    <string name="title_deleting_recipe">Удалить рецепт \'%1$s\'?</string>
    <string name="action_edit">Изменить</string>
</resources>
