<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ru.mrfrozzen.cookbook.presentation.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_recipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_add_recipe"
        android:text="@string/action_create_recipe"
        android:visibility="invisible"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="130dp"
        android:layout_marginRight="70dp"
        android:layout_marginEnd="70dp" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_add_category"
        android:text="@string/action_create_category"
        android:visibility="invisible"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="200dp"
        android:layout_marginRight="70dp"
        android:layout_marginEnd="70dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:visibility="invisible"
        android:clickable="false"
        app:backgroundTint="@color/colorFab2"
        app:srcCompat="@drawable/ic_format_list_bulleted_white"
        android:layout_marginEnd="@dimen/fab_margin" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:visibility="invisible"
        android:clickable="false"
        app:backgroundTint="@color/colorFab1"
        app:srcCompat="@drawable/ic_restaurant_white"
        android:layout_marginEnd="@dimen/fab_margin" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
